# DREADIT

./: .dockerignore  .env.dev  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.prod.yaml  docker-compose.yaml  docker_doc.txt  manage.py  pyproject.toml
.github/workflows/: deploy.yml
Dreadit/: asgi.py  settings.py  test.py  urls.py  wsgi.py
nginx/: nginx.conf
templates/account/: email_confirm.html
users/: models.py
users/api/v1/: views.py
users/migrations/: 0001_initial.py
